Fix extra margin and y-overflow problem in menu for mobile screens

--- a/docs-assets/css/sunpy.css
+++ b/docs-assets/css/sunpy.css
@@ -92,6 +92,12 @@ body {
   }
 }
 
+@media (max-width: 768px) {
+  .navbar-nav {
+    margin: 0;
+  }
+}
+
 .logo {
   float: left;
 }
